Ongoing refactoring, PMD rules to check code structure