@@ -30,25 +30,21 @@ public class XMLReader {
         instantiator.addSearchPackage(pkg);
     }
 
-    public void err(String s) {
-        System.out.println(s);
-    }
-
-    public Object readObject(String s) throws ParseException, BuildException, ContentError, FormatException {
+   
+    public Object readObject(String s) throws ParseException, BuildException, ContentError, FormatException, XMLException {
         return readFromString(s);
     }
 
-    public Object read(String s) throws ParseException, BuildException, ContentError, FormatException {
+    public Object read(String s) throws ParseException, BuildException, ContentError, FormatException, XMLException {
         return readFromString(s);
     }
 
-    public Object readFromString(String sin) throws ParseException, BuildException, ContentError, FormatException {
+    public Object readFromString(String sin) throws ParseException, BuildException, ContentError, FormatException, XMLException {
         String s = sin;
         s = XMLChecker.deGarbage(s);
-
-        if (s == null) {
-            return null;
-        }
+        
+        Object ret = null;
+        if (s != null) {
 
         progressFraction = 0.;
 
@@ -72,7 +68,9 @@ public class XMLReader {
 
         readFieldIntoParent(tkz, xmlHolder, xmlt, null);
 
-        return xmlHolder.getContent();
+        ret = xmlHolder.getContent();
+        }
+        return ret;
     }
 
     class XMLHolder {
@@ -88,12 +86,11 @@ public class XMLReader {
         }
     }
 
-    public XMLToken readToken(XMLTokenizer tkz) throws ParseException {
+    public XMLToken readToken(XMLTokenizer tkz) throws ParseException, XMLException {
         XMLToken xmlt = tkz.nextToken();
 
         int lno = tkz.lineno();
         if (nerror > 4) {
-            err("too many errors - aborting parse at line " + lno);
             throw new ParseException("too many errors - aborting at line " + lno);
         }
 
@@ -101,7 +98,7 @@ public class XMLReader {
     }
 
     
-    public String readInnerBlock(XMLTokenizer tkz, XMLToken opener) throws ContentError {
+    public String readInnerBlock(XMLTokenizer tkz, XMLToken opener) throws ContentError, XMLException {
        	
     	StringBuffer sb = new StringBuffer();
         if (opener.isClose()) {
@@ -115,7 +112,7 @@ public class XMLReader {
     }
     
     
-    public String readBlock(XMLTokenizer tkz, XMLToken opener) throws ParseException, ContentError {
+    public String readBlock(XMLTokenizer tkz, XMLToken opener) throws ParseException, ContentError, XMLException {
         StringBuffer sb = new StringBuffer();
         sb.append(opener.getXMLText());
         if (opener.isClose()) {
@@ -141,7 +138,7 @@ public class XMLReader {
 
    
     public void readFieldIntoParent(XMLTokenizer tkz, Object parent, XMLToken start,
-        Parameterized rootPtzd) throws ParseException, BuildException, ContentError, FormatException {
+        Parameterized rootPtzd) throws ParseException, BuildException, ContentError, FormatException, XMLException {
         // read the child object that is known to the parent as item.name
         // if the parent is a vector, the object is added as a new element;
         // if the parent is a string, the xml is just apended;
@@ -156,8 +153,7 @@ public class XMLReader {
 
         if (!start.isOpen()) {
             nerror++;
-            err("ERROR - read object start item was not an open tag " + start);
-            return;
+            throw new XMLException("ERROR - read object start item was not an open tag " + start);
         }
 
 
@@ -329,7 +325,7 @@ public class XMLReader {
                                 //          E.info("resetting dbl field " + parent + " " + start.getName() + " " + next.svalue);
 
                             } else if (child instanceof Integer && ((Integer) child).intValue() == 0) {
-                                child = new Integer(next.svalue);
+                                child = Integer.valueOf(next.svalue);
 
                             } else if (child instanceof BodyValued) {
                                 ((BodyValued) child).setBodyValue(next.svalue);
